5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1846_1275.log
== TEST (2019-06-22 14:48:19) 
-- CODE:
from numpy import*

m = array(eval(input("Digite: ")))

z = zeros(shape[:,j])

print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:49:18) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])

z = zeros(shape[:,j])

print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:50:24) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])



print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:55:43) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])



s = shape(m)[1]

print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:58:02) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])



n = shape(m)[0]

z = zeros(n, 7)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:59:09) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])



n = shape(m)[0]

z = zeros((n, 7), dtype=int)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:59:43) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])



n = shape(m)[0]

z = zeros((n, 7), dtype=int)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:00:01) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])

print(m)

n = shape(m)[0]

z = zeros((n, 7), dtype=int)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:00:13) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])

print(m)

n = shape(m)[0]

z = zeros((n, 7), dtype=int)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:00:29) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])

print(m)

n = shape(m)[0]
print(n)
z = zeros((n, 7), dtype=int)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:01:32) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])

print(m)

n = shape(m)[1]
print(n)
z = zeros((n, 7), dtype=int)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:03:57) 
-- CODE:
from numpy import*

m = array([eval(input("Digite: "))])

print(m)

x = m[1, 2]

print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:09:45) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[0]

m = zeros((s, 7))

print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:09:56) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[0]

m = zeros((s, 7), dtyoe=int)

print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:10:02) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[0]

m = zeros((s, 7), dtype=int)

print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:10:11) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]

m = zeros((s, 7), dtype=int)

print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:10:23) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]

print(s)

print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:11:14) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]

z = zeros(p, 7)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:11:32) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]

z = zeros(s, 7)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:12:15) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]

z = zeros((s, 7), dtype=int)

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:13:22) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]

z = zeros((s, 1), dtype=int)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:15:13) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
z = zeros(s, dtype=int)
for i in range(s):
	



-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:17:09) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
z = zeros(s, dtype=int)

for i in range(s):
	z[i] = z[i] + p[i, 0]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:17:43) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
z = zeros(s, dtype=int)

for i in range(s-1):
	z[i] = z[i] + p[i, 0]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:18:16) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
print(s)
z = zeros(s, dtype=int)

for i in range(s):
	z[i] = z[i] + p[i, 0]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:18:32) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
print(s)
z = zeros(s, dtype=int)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:19:40) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[0]
z = zeros(s, dtype=int)

for i in range(s):
	z[i] = z[i] + p[i, 0]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:21:04) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[0]
z = zeros(s, dtype=int)

for j in range(s):
	z[j] = z[j] + p[0, j]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:21:25) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[0]
z = zeros(s, dtype=int)

for j in range(s):
	z[1] = z[j] + p[0, j]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:21:46) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[0]
z = zeros(s, dtype=int)

for j in range(s):
	z[1] = p[0, j]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:23:00) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
z = zeros(s, dtype=int)

for j in range(s):
	z[1] = p[0, j]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:23:34) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
z = zeros(s, dtype=int)

for j in range(s):
	z[0] = p[0, j]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:24:20) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
z = zeros(s, dtype=int)

for j in range(s):
	z[0] = z[0] + p[0, j]
print(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:25:15) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
z = zeros(s, dtype=int)

for i in range(shape(p)[0])
	for j in range(s):
		z[i] = z[i] + p[i, j]
	
print(z)

-- ERROR:
File "XXXX", line 7
    for i in range(shape(p)[0])
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:25:54) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
c = shape(p)[0]
z = zeros(s, dtype=int)

for i in range(c):
	for j in range(s):
		z[i] = z[i] + p[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:26:13) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
c = shape(p)[0]
z = zeros(s, dtype=int)

for i in range(s):
	for j in range(s):
		z[i] = z[i] + p[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:26:24) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
c = shape(p)[0]
z = zeros(c, dtype=int)

for i in range(c):
	for j in range(s):
		z[i] = z[i] + p[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:26:44) 
-- CODE:
from numpy import*

p = array(eval(input("Digite: ")))
s = shape(p)[1]
c = shape(p)[0]
z = zeros(c, dtype=int)

for i in range(c):
	for j in range(s):
		z[i] = z[i] + p[i, j]
	
print(z)

-- EXECUTION TIME:
1.23853
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:27:29) 
-- CODE:
from numpy import*

m = array(eval(input("Digite: ")))
l = shape(m)[1]
c = shape(m)[0]
z = zeros(c, dtype=int)

for i in range(c):
	for j in range(l):
		z[i] = z[i] + m[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:28:34) 
-- CODE:
from numpy import*

m = array(eval(input("Digite: ")))
c = shape(m)[1]
l = shape(m)[0]
z = zeros(c, dtype=int)

for i in range(l):
	for j in range(c):
		z[i] = z[i] + m[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:28:49) 
-- CODE:
from numpy import*

m = array(eval(input("Digite: ")))
c = shape(m)[1]
l = shape(m)[0]
z = zeros(l, dtype=int)

for i in range(l):
	for j in range(c):
		z[i] = z[i] + m[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:34:52) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(m)[0]
colunas = shape(m)[1]

vetor_nulo = zeros(l, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = vetor_nulo[i] + matriz[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:35:04) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(m)[0]
colunas = shape(m)[1]

vetor_nulo = zeros(l, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = vetor_nulo[i] + matriz[i, j]
	
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:35:12) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(m)[0]
colunas = shape(m)[1]

vetor_nulo = zeros(l, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = vetor_nulo[i] + matriz[i, j]
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:35:30) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(m)[0]
colunas = shape(m)[1]

vetor_nulo = zeros(l, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = vetor_nulo[i] + matriz[i, j]
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:35:46) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(l, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = vetor_nulo[i] + matriz[i, j]
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:35:54) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(linhas, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = vetor_nulo[i] + matriz[i, j]
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:39:15) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(linhas, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = sum(matriz[i,:])
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:39:25) 
-- CODE:
from numpy import*

matriz = array(eval(input("Digite: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(linhas, dtype=int)


for i in range(linhas):
	for j in range(colunas):
		
		# Soma das linhas da matriz sendo atribuida ao vetor nulo
		
		vetor_nulo[i] = sum(matriz[i,:])
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
